# nsa-vit

./: .gitignore  LICENSE  README.md  __init__.py  evaluate.py  pyproject.toml  requirements.txt  sweep.py  train.py  train_teacher.py
configs/: default.yaml  deit_base.yaml  deit_small.yaml  vit_small.yaml
losses/: __init__.py  attention_distill.py  global_loss.py  kd_loss.py  null_space_loss.py  orthonormality_loss.py
models/: __init__.py  low_rank_layers.py  vit_student.py  vit_teacher.py
nsa_vit/: __init__.py
training/: __init__.py  distill.py  trainer.py
utils/: __init__.py  metrics.py  rank_selection.py  svd_init.py
