[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsa-vit"
version = "0.1.0"
description = "Null-Space Absorbing Vision Transformer Compression"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9.0",
    "pyyaml",
    "tensorboard",
    "wandb",
    "fvcore",
    "tqdm",
    "matplotlib",
]

[tool.setuptools]
packages = ["nsa_vit"]

